samples/errors/bind-on-call.stkn
func f0()
    func f1()
        return x
    y: f1()
    x: 10
    return f1()

write(f0())
